{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "55a8a5f0-b3ec-42bd-8bb3-37c8c3a9c840",
            "actions": [
                {
                    "name": "MoveCamera",
                    "type": "Value",
                    "id": "663e024c-0759-4c00-8cdf-efa39e2a6bb8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateCamera",
                    "type": "Value",
                    "id": "6e1ee8a6-2552-47d0-a43a-d22c31fb69a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "36c054a6-03e8-4cd3-a8a1-b478dded8e61",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OrbitCamera",
                    "type": "Button",
                    "id": "60413e7c-1bff-47de-a2f1-b52964cd610d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DragCamera",
                    "type": "Button",
                    "id": "079a8394-3e6c-4f04-abb5-69fe43b38e4e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CursorPosition",
                    "type": "Value",
                    "id": "efc76ff1-a00c-46d0-bea4-52282072b46d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CursorDelta",
                    "type": "Value",
                    "id": "72d65e51-4503-4d57-a251-dc83f92b2ace",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PrimaryAction",
                    "type": "Button",
                    "id": "c08ed26f-7701-4b3f-85c3-50f87193ed49",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryAction",
                    "type": "Button",
                    "id": "0433eb1a-8a03-474b-9094-2cf64d2bc879",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "19046f35-6128-42c5-8c35-6bbf8129ff06",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "996caee2-7f79-4a3a-8799-004e0dbbb2de",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "6b269aea-a701-4347-bd11-7574636bfc80",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "789000e9-aab6-4317-ac9c-00c55df1fe4d",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "bbbc5403-f8a6-49df-82c5-b58888a1df77",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d4c1326a-3e7b-4f8e-b670-d24d0eb69330",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "342b55b6-ec0e-4dcd-abe8-649750a869a5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5eecaa14-d4ac-4129-ab8b-efd47ce3642b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a2d5335c-a14f-4312-ab4e-d20515325a94",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "556e8a2f-0bfe-427b-9ddf-396b48099c9c",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OrbitCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "df042e9f-ef99-4049-80ce-b39a812f0bf4",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "OrbitCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "dbeb7ba3-d521-4412-89a0-6f5b0e83c38a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "OrbitCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "cf5b0855-4406-4e94-a10f-38f2d7a7accd",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "CursorPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4be8d83d-bac7-45ce-99e2-b1a062a7dd49",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "CursorDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45e4b488-7bf5-4541-ae12-421d40e6e509",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "PrimaryAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "475fd0d6-fbf5-4466-b0d4-63f348eab76f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "SecondaryAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "4977a4ac-f68a-41e3-9307-1cadcb9d51a8",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "cfdd2c7d-6928-4416-bf25-3908a9d4b564",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "DragCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "1d65d06d-0f5c-4ec1-b4d5-9957d5d39afe",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "DragCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard & Mouse",
            "bindingGroup": "Keyboard & Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}